--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,16 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --main-font: 'IMB Plex Mono', sans-serif;
+  --font-size: 18px;
+  --bg-color: #000028;
+  --accent-color: #FF0070;
+  --text-color: #F1B2CE;
+  --heading-color: #DB00FF;
+  --spase-s: 10px;
+  --space-m: 20px;
+  --space-l: 40px;
+  --space-xl: 50px;
+}
