--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,13 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --rec-display: block;
+  --decoration-color-opacity-40: rgba(255, 0, 112, 0.4);
+  --text-color: #F1B2CE;
+  --heading-color: #DB00FF;
+  --decoration-color: var(--accent-color);
+  --content-section-title-color: var(--accent-color);
+  --paragraph-title-color: var(--bg-color);
 }
