--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,9 +7,9 @@
 }
 
 body {
+  margin: 0 auto;
   min-inline-size: 375px;
   max-inline-size: 1440px;
-  margin: 0 auto;
 }
 
 h1,
@@ -28,7 +28,8 @@ ul {
   list-style: none;
 }
 
-picture {
+picture,
+img {
   margin: 0;
   padding: 0;
 }
