--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,14 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #FFF1F7;
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --heading-color: #FFC2E6;
+  --content-section-title-color: var(--text-color);
+  --paragraph-title-color: var(--text-color);
+  --bg-image: url(../images/cover-image-light.png);
+  --rec-display: none;
+  --decoration-color: var(--text-color);
+  --decoration-color-opacity-40: rgba(53, 52, 48, 0.4);
 }
