--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,15 +3,23 @@
   и их переопределение под различные устройства
 */
 
-:root {
-  --main-font: 'IMB Plex Mono', sans-serif;
-  --font-size: 18px;
-  --bg-color: #000028;
-  --accent-color: #FF0070;
-  --text-color: #F1B2CE;
-  --heading-color: #DB00FF;
-  --spase-s: 10px;
-  --space-m: 20px;
-  --space-l: 40px;
-  --space-xl: 50px;
-}
+  :root {
+    --main-font: 'IBM Plex mono', sans-serif;
+    --font-size: 18px;
+    --bg-image: url(../images/cover-image-dark.png);
+    --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --bg-color: #000028;
+    --accent-color: #ff0070;
+    --rec-display: block;
+    --decoration-color-opacity-40: rgba(255, 0, 112, 0.4);
+    --text-color: #F1B2CE;
+    --heading-color: #DB00FF;
+    --decoration-color: var(--accent-color);
+    --content-section-title-color: var(--accent-color);
+    --paragraph-title-color: var(--bg-color);
+    --section-padding: 10px;
+    --space-s: 10px;
+    --space-m: 20px;
+    --space-l: 40px;
+    --space-xl: 50px;
+  }
