--- a/styles/dark.css
+++ b/styles/dark.css
@@ -11,11 +11,12 @@
   */
   --bg-color: #000028;
   --accent-color: #ff0070;
-  --rec-display: block;
-  --decoration-color-opacity-40: rgba(255, 0, 112, 0.4);
   --text-color: #F1B2CE;
   --heading-color: #DB00FF;
+  --decoration-color-opacity-40: rgba(255, 0, 112, 0.4);
   --decoration-color: var(--accent-color);
   --content-section-title-color: var(--accent-color);
   --paragraph-title-color: var(--bg-color);
+  --bg-image: url(../images/cover-image-dark.png);
+  --rec-display: block;
 }
