--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,10 @@
   font-weight: normal;
   font-size: var(--font-size);
   background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .record {
@@ -37,10 +41,7 @@
   justify-items: end;
   align-items: center;
   padding: var(--section-padding);
-  padding: var(--space-s);
-  background-image: var(--bg-image);
-  background-position: center;
-  background-size: cover;
+  block-size: 100vh;
   min-block-size: 668px;
 }
 
@@ -85,7 +86,7 @@
   block-size: 26px;
 }
 
-.header__theme-menu-button:focus {
+.header__theme-menu-button:focus-visible {
   border-block-end: 1px solid var(--decoration-color);
   outline: 0;
 }
@@ -100,6 +101,7 @@
 }
 
 .header__title {
+  justify-self: flex-start;
   color: var(--heading-color);
   font-weight: bold;
   font-size: var(--title-font-size);
@@ -156,7 +158,7 @@
   border-block-end: 1px solid var(--text-color);
 }
 
-.content-link:focus {
+.content-link:focus-visible {
   outline: 1px solid var(--text-color);
   outline-offset: 1px;
 }
@@ -168,7 +170,7 @@
 
 .in-pictures {
   display: grid;
-  gap: var(--space-s);
+  gap: var(--section-padding);
 }
 
 .content__picture {
@@ -181,6 +183,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  block-size: 100vh;
   min-block-size: 647px;
 }
 
