--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,23 +3,134 @@
   и их переопределение под различные устройства
 */
 
+:root {
+  --main-font: 'IBM Plex mono', sans-serif;
+  --font-size: 18px;
+  --bg-image: url(../images/cover-image-dark.png);
+  --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --rec-display: block;
+  --decoration-color-opacity-40: rgba(255, 0, 112, 0.4);
+  --text-color: #F1B2CE;
+  --heading-color: #DB00FF;
+  --decoration-color: var(--accent-color);
+  --content-section-title-color: var(--accent-color);
+  --paragraph-title-color: var(--bg-color);
+  --section-padding: 10px;
+  --space-s: 10px;
+  --space-m: 20px;
+  --space-l: 40px;
+  --space-xl: 50px;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+     /* вторая секция */
+
+     .what .content-section__title {
+      display: block;
+      max-width: 236px;
+    }
+}
+
+@media (min-width: 768px) {
   :root {
-    --main-font: 'IBM Plex mono', sans-serif;
-    --font-size: 18px;
-    --bg-image: url(../images/cover-image-dark.png);
-    --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    --bg-color: #000028;
-    --accent-color: #ff0070;
-    --rec-display: block;
-    --decoration-color-opacity-40: rgba(255, 0, 112, 0.4);
-    --text-color: #F1B2CE;
-    --heading-color: #DB00FF;
-    --decoration-color: var(--accent-color);
-    --content-section-title-color: var(--accent-color);
-    --paragraph-title-color: var(--bg-color);
-    --section-padding: 10px;
-    --space-s: 10px;
-    --space-m: 20px;
-    --space-l: 40px;
-    --space-xl: 50px;
+    --title-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --section-padding: 20px;
+    --space-l: 60px;
+    --space-xl: 80px;
   }
+
+  /* первая секция */
+
+  .why {
+    display: grid;
+    column-gap: var(--space-m);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4 , auto);
+  }
+
+  .why .content-section__title {
+    grid-row: span 4;
+  }
+
+   .why .content__paragraph-title:first-of-type{
+    margin: 0;
+  }
+
+  .why .content__paragraph,
+  .why .content__paragraph-title {
+    grid-column: 2 / 4;
+  }
+
+  /* третья секция */
+
+  .how {
+    display: grid;
+    column-gap: var(--space-m);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(11, auto);
+
+  }
+
+  .how .content-section__title {
+    grid-row: span 11;
+  }
+
+  .how .content__paragraph-title {
+    margin: 0;
+  }
+
+  .how .content__paragraph,
+  .how .content__paragraph-subtitle,
+  .how .content__paragraph-title {
+    grid-column: 2 / 4;
+  }
+
+  /* четвёртая секция */
+  .in-picture {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+  }
+
+  .content__pictures-title {
+    grid-column: span 3;
+  }
+
+  .sunset-image {
+    grid-column: span 2;
+  }
+
+  .ice-cream-image {
+    block-size: 100%;
+    grid-row: span 2;  
+  }
+
+  .tape-image {
+    block-size: 100%;
+    grid-row: span 2;  
+  }
+
+  .street-image {
+    grid-column: span 2;
+  }
+
+}
+
+
+@media (min-width: 1024px) {
+  /* вторая секция */
+
+  .what {
+    display: grid;
+    column-gap: var(--space-m);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3 , auto);
+    grid-auto-flow: column;
+  }
+
+  .what .content-section__title {
+    grid-column: span 3;
+  }
+}
