--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,6 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-l);
   color: var(--text-color);
   font-family: var(--main-font);
   font-weight: normal;
@@ -123,6 +120,7 @@
 .content {
   display: grid;
   gap: var(--space-xl);
+  margin-block-start: var(--space-l);
 }
 
 .content-section {
@@ -184,6 +182,7 @@
   align-items: center;
   block-size: 100vh;
   min-block-size: 647px;
+  margin-block-start: var(--space-l);
 }
 
 .footer__heading {
