Добавлен медиа запрос для предпочетаемой белой темы

--- a/styles/light.css
+++ b/styles/light.css
@@ -20,3 +20,18 @@
   --bg-image: url(../images/cover-image-light.png);
   --rec-display: none;
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #FFF1F7;
+    --accent-color: #ff8dcb;
+    --text-color: #353430;
+    --heading-color: #FFC2E6;
+    --decoration-color-opacity-40: rgba(53, 52, 48, 0.4);
+    --content-section-title-color: var(--text-color);
+    --paragraph-title-color: var(--text-color);
+    --decoration-color: var(--text-color);
+    --bg-image: url(../images/cover-image-light.png);
+    --rec-display: none;
+    }
+}
