--- a/styles/style.css
+++ b/styles/style.css
@@ -82,8 +82,8 @@
   color: var(--decoration-color);
   line-height: 100%;
   background-color: transparent;
-  block-size: 26px;
   cursor: pointer;
+  block-size: 26px;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -130,6 +130,8 @@
 }
 
 .content-section {
+  display: grid;
+  gap: var(--space-m);
   padding: 0 var(--section-padding);
 }
 
@@ -140,14 +142,18 @@
   line-height: 130%;
 }
 
+.subsection {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-s);
+}
+
 .content__paragraph-title {
-  margin-block-start: var(--space-m);
   font-weight: bold;
   font-size: var(--font-size);
 }
 
 .content__paragraph {
-  margin-block-start: var(--space-s);
   line-height: 130%;
 }
 
@@ -168,8 +174,12 @@
   outline-offset: 1px;
 }
 
+.simple-tips {
+  display: grid;
+  gap: var(--space-m);
+}
+
 .content__paragraph-subtitle {
-  margin-block-start: var(--space-m);
   font-weight: normal;
 }
 
@@ -219,53 +229,30 @@
   /* первая секция */
 
   .why {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, auto);
-    column-gap: var(--space-m);
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(2, auto);
   }
 
   .why .content-section__title {
-    grid-row: span 4;
+    grid-row: 1 / 3;
   }
 
-  .why .content__paragraph-title:first-of-type {
-    margin: 0;
+  /* вторая секция */
+
+  .what {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
   }
 
-  .why .content__paragraph,
-  .why .content__paragraph-title {
-    grid-column: 2 / 4;
+  .what .subsection {
+    grid-column: 1 / 4;
   }
-
-    /* вторая секция */
-
-    .what .content-section__title {
-      /* display: block; */
-      max-inline-size: 236px;
-    }
 
   /* третья секция */
 
   .how {
-    display: grid;
-    grid-template-columns: minmax(237px, 1fr) 1fr 1fr;
-    grid-template-rows: repeat(11, auto);
-    column-gap: var(--space-m);
-  }
-
-  .how .content-section__title {
-    grid-row: span 11;
-  }
-
-  .how .content__paragraph-title {
-    margin: 0;
-  }
-
-  .how .content__paragraph,
-  .how .content__paragraph-subtitle,
-  .how .content__paragraph-title {
-    grid-column: 2 / 4;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto;
   }
 
   /* четвёртая секция */
@@ -326,18 +313,31 @@
     inset-inline-end: 20px;
   }
 
+  /* первая секция */
+
+  .why {
+    grid-template-columns: 1fr 2.06fr;
+  }
+
   /* вторая секция */
 
   .what {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, auto);
-    grid-auto-flow: column;
-    column-gap: var(--space-m);
+    grid-template-rows: auto;
   }
 
   .what .content-section__title {
-    grid-column: span 3;
-    max-inline-size: initial;
+    grid-column: 1 / 4;
+    max-inline-size: 315px;
+  }
+
+  .what .subsection {
+    grid-column: inherit;
+  }
+
+  /* третья секция */
+
+  .how {
+    grid-template-columns: 1fr 2.06fr;
   }
 }
